# fit_app_domain

./: Cargo.toml  README.md  todo.md
src/: error.rs  lib.rs  prelude.rs
src/shared/: abstractions.rs  domain_id.rs  id.rs  mod.rs
src/user_management/entities/: mod.rs
src/user_management/entities/user/: abstractions.rs  builder.rs  entity.rs  mod.rs
src/user_management/entities/user/value_objects/: account.rs  email.rs  id.rs  joined_at.rs  mod.rs  password.rs  password_hash.rs
src/user_management/entities/user_credentials/: abstractions.rs  entity.rs  mod.rs
src/user_management/entities/user_credentials/value_objects/: email.rs  password.rs  password_hash.rs
src/user_management/entities/value_objects/: mod.rs
